tests/invalid/Switch_Invalid_1.whiley
function f(int x) -> int:
    switch x:
        case 1:
            return 0
        case 1:
            return -1
    return 10
